# Dll_Helpers

./: .gitignore  CMakeLists.txt  LICENSE  README  get_GTest.cmd
src/Helpers/: DllHelpers.h
src/TestDll/: CMakeLists.txt  main.cpp
src/Tests/: CMakeLists.txt  main.h
src/Tests/Test/: Test.cpp
